--- a/source/index-en.html
+++ b/source/index-en.html
@@ -346,51 +346,41 @@
                 </div>
             </div>
         </section>
-
-        <br>
-        <!-- Testimonials -->
-        <section id="testimonials" class="section-5 carousel testimonials">
-            <div class="overflow-holder">
-                <div class="container">
-                    <div class="row text-center intro">
-                        <div class="col-12">
-                            <span class="pre-title">Client Testimonials</span>
-                            <h2>Reliable <span class="featured"><span>Feedback</span></span></h2>
-                            <p class="text-max-800">We work tirelessly in pursuit of ideals that can improve the lives of our clients. This is what drives us, and we are grateful for the recognition.</p>
-                        </div>
-                    </div>
-                    <div class="swiper-container mid-slider items" data-perview="3">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide slide-center item">
-                                <div class="row card">
-                                    <div class="col-12">
-                                        <p>Albanghu has proven to be our reliable partner with quick solutions and exceptional quality, essential for our pharmaceutical operations. Their professionalism and efficiency are unparalleled, always meeting our highest standards.</p>
-                                        <i class="quote-right fas fa-quote-right"></i>
-                                    </div>
+        <!-- Numbers -->
+        
+        <section id="about-2" class="section-1 odd highlights image-right counter funfacts featured">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-8 text-center">
+                        <div class="row items justify-content-center">
+                            <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
+                                <div data-percent="128" class="radial">
+                                    <span></span>
                                 </div>
+                                <h4>Certifications</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
                             </div>
-                            <div class="swiper-slide slide-center item">
-                                <div class="row card">
-                                    <div class="col-12">
-                                        <p>We are impressed by Albanghu's ability to bridge distances and facilitate international pharmaceutical trade. Their commitment to quality and reliability in every transaction is admirable. They are our ideal strategic ally to maintain an efficient and effective supply chain.</p>
-                                        <i class="quote-right fas fa-quote-right"></i>
-                                    </div>
+                            <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
+                                <div data-percent="230" class="radial">
+                                    <span></span>
                                 </div>
+                                <h4>Employees</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
                             </div>
-                            <div class="swiper-slide slide-center item">
-                                <div class="row card">
-                                    <div class="col-12">
-                                        <p>The immediate attention and support we receive from Albanghu are fundamental to our operations. We fully trust their experience in the Latin American market and their ability to maintain the highest quality standards in all the products they supply.</p>
-                                        <i class="quote-right fas fa-quote-right"></i>
-                                    </div>
+                            <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
+                                <div data-percent="517" class="radial">
+                                    <span></span>
                                 </div>
+                                <h4>Customers</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        
+        <!-- End Numbers -->
+        <br>
         <!-- Contact -->
         <section id="contact" class="section-6 form contact">
             <div class="container">
