--- a/source/index-por.html
+++ b/source/index-por.html
@@ -241,7 +241,7 @@
                             </div>  
                             <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
                                 <h4><i class="fa fa-dollar-sign"></i> Financiamento</h4>
-                                <p>Soluções de crédito e personalizadas em apoio constante aos nossos clientes.</p>
+                                <p>Soluções de crédito personalizadas em apoio constante aos nossos clientes.</p>
                             </div>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
                     <div class="col-12">
                         <span class="pre-title">Nossos</span>
                         <h2><span class="featured"><span>Valores</span></span></h2>
-                        <p class="text-max-800">Na Albanghu, seguimos um conjunto de valores fundamentais que refletem nosso compromisso com a excelência e a satisfação de nossos clientes. Esses valores são:</p>
+                        <p class="text-max-800">Na Albanghu, seguimos um conjunto de valores fundamentais que refletem nosso compromisso com a excelência e a satisfação de nossos clientes. Tais como:</p>
                     </div>
                 </div>
                 <div class="row justify-content-center text-center items">
@@ -348,52 +348,42 @@
                 </div>
             </div>
         </section>
-        
-
         <br>
-        <!-- Testimonials -->
-        <section id="testimonials" class="section-5 carousel testimonials">
-            <div class="overflow-holder">
-                <div class="container">
-                    <div class="row text-center intro">
-                        <div class="col-12">
-                            <span class="pre-title">Depoimentos de Clientes</span>
-                            <h2>Feedback <span class="featured"><span>confiável</span></span></h2>
-                            <p class="text-max-800">Trabalhamos intensamente em busca de ideais que possam melhorar a vida de nossos clientes. Isso é o que nos impulsiona, e somos gratos pelo reconhecimento.</p>
-                        </div>
-                    </div>
-                    <div class="swiper-container mid-slider items" data-perview="3"> 
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide slide-center item">
-                                <div class="row card">
-                                    <div class="col-12">
-                                        <p>A Albanghu tem se mostrado nosso parceiro confiável com soluções rápidas e qualidade excepcional, essencial para nossas operações farmacêuticas. Seu profissionalismo e eficiência são incomparáveis, sempre atendendo aos nossos padrões mais exigentes.</p>
-                                        <i class="quote-right fas fa-quote-right"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide slide-center item">
-                                <div class="row card">
-                                    <div class="col-12">
-                                        <p>Nós ficamos impressionados com a capacidade da Albanghu de encurtar distâncias e facilitar o comércio farmacêutico internacional. Seu compromisso com a qualidade e a confiabilidade em cada transação é admirável. São nosso parceiro estratégico ideal para manter uma cadeia de suprimentos eficiente e eficaz.</p>
-                                        <i class="quote-right fas fa-quote-right"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide slide-center item">
-                                <div class="row card">
-                                    <div class="col-12">
-                                        <p>O atendimento imediato e o suporte que recebemos da Albanghu são fundamentais para nossas operações. Confiamos plenamente em sua experiência no mercado latino-americano e em sua capacidade de manter os mais altos padrões de qualidade em todos os produtos que fornecem.</p>
-                                        <i class="quote-right fas fa-quote-right"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+                <!-- Numbers -->
         
+                <section id="about-2" class="section-1 odd highlights image-right counter funfacts featured">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-md-8 text-center">
+                                <div class="row items justify-content-center">
+                                    <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
+                                        <div data-percent="128" class="radial">
+                                            <span></span>
+                                        </div>
+                                        <h4>Certifications</h4>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                                    </div>
+                                    <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
+                                        <div data-percent="230" class="radial">
+                                            <span></span>
+                                        </div>
+                                        <h4>Employees</h4>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                                    </div>
+                                    <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
+                                        <div data-percent="517" class="radial">
+                                            <span></span>
+                                        </div>
+                                        <h4>Customers</h4>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- End Numbers -->
+         <br>
         <!-- Contact -->
         <section id="contact" class="section-6 form contact">
             <div class="container">
