--- a/source/index.html
+++ b/source/index.html
@@ -368,26 +368,29 @@
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-8 text-center">
                         <div class="row items justify-content-center">
-                            <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
-                                <div data-percent="128" class="radial">
+                            <div data-aos="fade-up" class="col-12 col-md-3 p-3 mb-4 item">
+                                <div data-percent="12" class="radial">
                                     <span></span>
                                 </div>
-                                <h4>Certifications</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                                <h4>Paises</h4>
                             </div>
-                            <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
-                                <div data-percent="230" class="radial">
+                            <div data-aos="fade-up" class="col-12 col-md-3 p-3 mb-4 item">
+                                <div data-percent="35" class="radial">
                                     <span></span>
                                 </div>
-                                <h4>Employees</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                                <h4>Clientes</h4>
                             </div>
-                            <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
-                                <div data-percent="517" class="radial">
+                            <div data-aos="fade-up" class="col-12 col-md-3 p-3 mb-4 item">
+                                <div data-percent="3500" class="radial">
                                     <span></span>
                                 </div>
-                                <h4>Customers</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                                <h4>Productos</h4>
+                            </div>
+                            <div data-aos="fade-up" class="col-12 col-md-3 p-3 mb-4 item">
+                                <div data-percent="7" class="radial">
+                                    <span></span>
+                                </div>
+                                <h4>Fabricantes</h4>
                             </div>
                         </div>
                     </div>
