--- a/source/index-en.html
+++ b/source/index-en.html
@@ -66,18 +66,6 @@
                 --section-5-bg-color: #ffffff;
                 --section-6-bg-color: #f5f5f5;
             }
-            .language-selector {
-                position: absolute;
-                top: 10px;
-                right: 10px;
-            }
-
-            .language-selector img {
-                width: 32px;
-                height: auto;
-                margin-left: 10px;
-                cursor: pointer;
-            }
         </style>
         
     </head>
@@ -109,9 +97,10 @@
                             <a href="https://www.linkedin.com/company/albanghu/" class="nav-link pr-0"><i class="fab fa-linkedin-in"></i></a>
                         </li>
                     </ul>
-                    <div class="language-selector">
-                        <a href="index.html"><img src="assets/images/spain.png" alt="Spain" title="Español"></a>
-                        <a href="index-por.html"><img src="assets/images/portuguese.png" alt="Portuguese" title="Portuguese"></a>            
+                    <div class="lang">
+                        <a href="index-es.html" ><img src="assets/images/spain.png" alt="spain" title="Español"></a>
+                        <a href="index-en.html" class="lang_active"><img src="assets/images/USA.png" alt="English" title="English"></a>
+                        <a href="index-por.html" ><img src="assets/images/portuguese.png" alt="Portuguese" title="Portuguese"></a>
                     </div>
                 </div>
                 
