--- a/source/index-en.html
+++ b/source/index-en.html
@@ -97,11 +97,6 @@
                             <a href="https://www.linkedin.com/company/albanghu/" class="nav-link pr-0"><i class="fab fa-linkedin-in"></i></a>
                         </li>
                     </ul>
-                    <div class="lang">
-                        <a href="index-es.html" ><img src="assets/images/spain.png" alt="spain" title="Español"></a>
-                        <a href="index-en.html" class="lang_active"><img src="assets/images/USA.png" alt="English" title="English"></a>
-                        <a href="index-por.html" ><img src="assets/images/portuguese.png" alt="Portuguese" title="Portuguese"></a>
-                    </div>
                 </div>
                 
             </nav>
@@ -665,6 +660,11 @@
         <script src="assets/js/vendor/shuffle.min.js"></script>
         <script src="assets/js/vendor/particles.min.js"></script>
         <script src="assets/js/main.js"></script>
+        <div class="lang">
+            <a href="index.html" ><img src="assets/images/spain.png" alt="spain" title="Español"></a>
+            <a href="index-en.html" class="lang_active"><img src="assets/images/USA.png" alt="English" title="English"></a>
+            <a href="index-por.html" ><img src="assets/images/portuguese.png" alt="Portuguese" title="Portuguese"></a>
+        </div>
 
     </body>
 </html>
