--- a/source/index.html
+++ b/source/index.html
@@ -104,12 +104,6 @@
                             <a href="https://www.linkedin.com/company/albanghu/" class="nav-link pr-0"><i class="fab fa-linkedin-in"></i></a>
                         </li>
                     </ul>
-                    <div class="lang">
-                        <a href="index-es.html" class="lang_active"><img src="assets/images/spain.png" alt="spain" title="Español"></a>
-                        <a href="index-en.html"><img src="assets/images/USA.png" alt="English" title="English"></a>
-                        <a href="index-por.html"><img src="assets/images/portuguese.png" alt="Portuguese" title="Portuguese"></a>
-                    </div>
-                    
                 </div>
             </nav>
             
@@ -655,6 +649,12 @@
         <script src="assets/js/vendor/shuffle.min.js"></script>
         <script src="assets/js/vendor/particles.min.js"></script>
         <script src="assets/js/main.js"></script>
+
+        <div class="lang">
+            <a href="index.html" class="lang_active"><img src="assets/images/spain.png" alt="spain" title="Español"></a>
+            <a href="index-en.html"><img src="assets/images/USA.png" alt="English" title="English"></a>
+            <a href="index-por.html"><img src="assets/images/portuguese.png" alt="Portuguese" title="Portuguese"></a>
+        </div>
 
     </body>
 </html>
